--- a/WpfApp_ADO_NET_SQLDataReader/WpfApp_ADO_NET_SQLDataReader.csproj
+++ b/WpfApp_ADO_NET_SQLDataReader/WpfApp_ADO_NET_SQLDataReader.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Window_DataGrid.xaml.cs">
       <DependentUpon>Window_DataGrid.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="MainWindow_SQLDataReader.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -98,8 +98,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="MainWindow_SQLDataReader.xaml.cs">
+      <DependentUpon>MainWindow_SQLDataReader.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Styles\DataGrid_Base.xaml">
