--- a/WpfApp_ADO_NET_CodeFirst/WpfApp_ADO_NET_CodeFirst.csproj
+++ b/WpfApp_ADO_NET_CodeFirst/WpfApp_ADO_NET_CodeFirst.csproj
@@ -78,7 +78,7 @@
     <Compile Include="Window_DataGrid.xaml.cs">
       <DependentUpon>Window_DataGrid.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="MainWindow_CodeFirst.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -86,8 +86,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="MainWindow_CodeFirst.xaml.cs">
+      <DependentUpon>MainWindow_CodeFirst.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Styles\DataGrid_Base.xaml">
