--- a/WpfApp_ADO_NET_SQLDataAdapter/WpfApp_ADO_NET_SQLDataAdapter.csproj
+++ b/WpfApp_ADO_NET_SQLDataAdapter/WpfApp_ADO_NET_SQLDataAdapter.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Classes\Manufacturer.cs" />
     <Compile Include="Classes\Project.cs" />
     <Compile Include="Styles\RowToIndexConv.cs" />
+    <Compile Include="Styles_ChangesWindow\Window_Change.Airplane.cs" />
+    <Compile Include="Styles_ChangesWindow\Window_Change.Employees.cs" />
+    <Compile Include="Styles_ChangesWindow\Window_Change.Manufacturer.cs" />
+    <Compile Include="Styles_ChangesWindow\Window_Change.Projects.cs" />
     <Compile Include="Styles_ChangesWindow\Window_Change.xaml.cs">
       <DependentUpon>Window_Change.xaml</DependentUpon>
     </Compile>
