--- a/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet.csproj
+++ b/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Classes\Airplane.cs" />
     <Compile Include="Classes_SqlDataAdapter\SqlDatabase.cs" />
     <Compile Include="Classes_SqlDataAdapter\SqlDatabase.Static.cs" />
+    <Compile Include="DataSet_ManufacturerAirplane.cs">
+      <DependentUpon>DataSet_ManufacturerAirplane.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Styles\ConverterEmployeesToString.cs" />
     <Compile Include="Styles\ConverterProjectsToString.cs" />
     <Compile Include="DataSet_ManufacturerAirplane.Designer.cs">
